# recon-reporter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  scope.bugbounty.example.yml  scope.example.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  QUALITY-PLAN.md  ROADMAP.md  THREAT-MODEL.md  USAGE.md
recon_reporter/: __init__.py  cli.py  config.py  dashboard.py  diff.py  logconf.py  mcp_server.py  model.py  pipeline.py  store.py
recon_reporter/ai/: analyst.py  base.py  claude.py  local.py  remediation.py
recon_reporter/auth/: bugbounty.py  scope.py
recon_reporter/collectors/: base.py  default_creds.py  http_headers.py  nmap.py  subdomains.py  tls.py  whatweb.py
recon_reporter/enrich/: cve.py  exploit.py  risk.py  rules.py
recon_reporter/parsers/: nmap_xml.py
recon_reporter/report/: bugbounty.py  csv.py  html.py  markdown.py  pdf.py  sarif.py  terminal.py
samples/: sample-dashboard.html  sample-report.html  sample-report.md  sample-report.sarif.json
tests/: test_ai.py  test_bugbounty.py  test_cli.py  test_cve.py  test_dashboard.py  test_exploit.py  test_phase2.py  test_phase3.py  test_pipeline.py  test_pipeline_run.py  test_reports.py  test_rules.py  test_store.py
tests/fixtures/: sample_nmap.xml
