[project]
name = "recon-reporter"
version = "0.2.0"
description = "AI-assisted reconnaissance reporting tool — orchestrates Nmap, maps findings to CVEs, and generates prioritized security reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zachary Phul" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anthropic>=0.40",   # optional at runtime; only used by the Claude analyst
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
recon-reporter = "recon_reporter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recon_reporter"]
