[project]
name = "recon-reporter"
version = "0.4.0"
description = "AI-assisted reconnaissance reporting tool — orchestrates Nmap, maps findings to CVEs, and generates prioritized security reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zachary Phul" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anthropic>=0.40",   # optional at runtime; only used by the Claude analyst
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
recon-reporter = "recon_reporter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recon_reporter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = [
    "E501",  # long lines are acceptable in tables/prompts
    "B008",  # typer.Option/Argument in defaults is the framework idiom, not a bug
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true       # anthropic / mcp are optional at runtime
warn_redundant_casts = true
no_implicit_optional = true
files = ["recon_reporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
